# rangerplex-ai

./: .antigravityignore  .env-example  .gitignore  .npmrc  ALIAS_SYSTEM_PLAN.md  App.tsx  BROWSER_FIX.md  CHANGELOG.md  CPP_PROJECT.md  CPP_ROADMAP.md  CPP_SETUP.md  CYBERSEC_PODCAST_HUB.md  DOCKER_MCP_MISSION_COMPLETE.md  Dockerfile  FIXES_2025-12-01.md  GIT_COMMANDS.md  INSTALL_SUMMARY.md  LEDGER_IMPLEMENTATION_PLAN.md  LICENSE  M4_OLLAMA_SETUP.sh  MCP_PORT_FIX_REPORT.md  MIGRATION_GUIDE.md  OSINT_TOOLS_PLAN.md  PM2_VERSION_SYNC_GUIDE.md  RANGERBLOCK_DECENTRALIZED_ARCHITECTURE.md  RANGERBLOCK_MVP_PLAN.md  RANGERBLOCK_NODEJS_GUIDE.md  README.md  RSS_COMPLETE.md  RSS_CRITICAL_FIX.md  RSS_INTEGRATION_GUIDE.md  RSS_INTEGRATION_STATUS.md  RSS_NEWS_TICKER_PLAN.md  RSS_PHASE1_COMPLETE.md  RSS_PHASE2_PROGRESS.md  RSS_PHASE3_COMPLETE.md  RSS_SIDEBAR_UPDATE.md  START_WINDOWS.md  TODO_LIST.md  WINDOWS_SETUP.md  (+25 more)
Blockchain/: DEPLOYMENT_GUIDE.md
components/: ActionHUD.tsx  AliasConfirmationModal.tsx  AliasManager.tsx  ApiTester.tsx  AppChoiceModal.tsx  ArtifactPreview.tsx  AudioPlayer.tsx  AuthPage.tsx  ChatInterface.tsx  CommandDeck.tsx  ConfettiOverlay.tsx  CyberSecPodcast.tsx  DavidEasterEgg.tsx  DeathStarEasterEgg.tsx  DyslexiaModeControls.tsx  FazalEasterEgg.tsx  GroundingSourceCard.tsx  ImageGallery.tsx  InputArea.tsx  ManualViewer.tsx  MatrixRain.tsx  MermaidDiagram.tsx  MessageItem.tsx  MichaelEasterEgg.tsx  PersonalitySelector.tsx  PetWidget.tsx  RSSFeedManager.tsx  Sidebar.tsx  (+23 more)
cpp/modules/hello-world/: CMakeLists.txt  README.md  hello.cpp  index.js  package.json  test.js
(+684 files in other folders)
